CHANGES IN VERSION 2.11.6
-------------------------
 o Nothing yet
 
CHANGES IN VERSION 2.11.5
-------------------------
 o writeMSData and copyWriteMSData functions enabling to export MS data to
   mzML or mzXML files.
 
CHANGES IN VERSION 2.11.4
-------------------------
 o Use full TMT file pattern to select a single file
 
CHANGES IN VERSION 2.11.3
-------------------------
 o Read ion injection time from mzML files and add it to the data.frame returned
   by the header function.
 
CHANGES IN VERSION 2.11.2
-------------------------
 o New getScanHeaderInfo and getAllScanHeaderInfo implementations for the pwiz
   backend. Fixes issue #106 and issue #216 in MSnbase.

CHANGES IN VERSION 2.11.1
-------------------------
 o Change default I/O backend from Ramp to pwiz.

CHANGES IN VERSION 2.11.0
-------------------------
 o Bioc devel 3.6
 
CHANGES IN VERSION 2.10.0
-------------------------
 o Bioc release 3.5

CHANGES IN VERSION 2.9.11
-------------------------
 o Restore -fpermissive flag on windows

CHANGES IN VERSION 2.9.10
-------------------------
 o Remove register keyword causing WARNING. 

CHANGES IN VERSION 2.9.9
------------------------
 o Remove C++ references to cout/cerr/abort in pwiz code (see issue #89)

CHANGES IN VERSION 2.9.8
------------------------
 o Fix reading spectrum polarity from mzML using pwiz backend, closes #81

CHANGES IN VERSION 2.9.7
------------------------
 o Fix compilation on macOS

CHANGES IN VERSION 2.9.6
------------------------
 o Compile on macOS, but hdf5 path hard-coded
 
CHANGES IN VERSION 2.9.5
------------------------
 o Add missing boost/config/platform/macos.hpp <2017-01-25 Wed>
 
CHANGES IN VERSION 2.9.4
------------------------
 o New chromatogram accessors (for pwiz backend only) - see issue #73
   <2017-01-23 Mon>
 
CHANGES IN VERSION 2.9.3
------------------------
 o bump to new Rcpp 0.12.8 version <2017-01-05 Thu>
 
CHANGES IN VERSION 2.9.2
------------------------
 o cleanup CFLAGS and LIBS for libnetcdf