@@ -1,6 +1,7 @@
 CHANGES IN VERSION 2.11.6
 -------------------------
- o Nothing yet
+ o runInfo returns the run start time stamp from files providing this
+   information (mzML files).
  
 CHANGES IN VERSION 2.11.5
 -------------------------
